appending pictures as list items into wrapper
Signed-off-by: Nils Borchers <nils.borchers@sumup.com>

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     </head>
     <body>
 
-        <div id="river"></div>
+        <ul id="river"></ul>
 
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
