--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
 
 
         <!-- build:js scripts/main.js -->
+        <script src="scripts/config.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
     </body>
