--- a/app/index.html
+++ b/app/index.html
@@ -6,14 +6,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>app</title>
+        <title>photo ocean</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <!-- build:css styles/vendor.css -->
-        <!-- bower:css -->
-        <!-- endbower -->
-        <!-- endbuild -->
+
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
@@ -29,9 +25,11 @@
         <!-- endbower -->
         <!-- endbuild -->
 
+        <!-- build:js scripts/config.js -->
+        <script src="scripts/config.js"></script>
+        <!-- endbuild -->
 
         <!-- build:js scripts/main.js -->
-        <script src="scripts/config.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
     </body>
