rafactoring image container to be more flexible about positioning the title
Signed-off-by: Nils Borchers <nils.borchers@sumup.com>

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
         <!-- endbuild -->
     </head>
     <body>
-
+        <!-- container holding the images to come -->
         <ul id="river"></ul>
 
         <!-- build:js scripts/vendor.js -->
